src/test/ui/feature-gate/issue-43106-gating-of-unstable.stderr
error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:7:1
   |
LL | #![unstable                   = "1200"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:10:1
   |
LL | #[unstable = "1200"]
   | ^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:13:17
   |
LL |     mod inner { #![unstable="1200"] }
   |                 ^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:16:5
   |
LL |     #[unstable = "1200"] fn f() { }
   |     ^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:19:5
   |
LL |     #[unstable = "1200"] struct S;
   |     ^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:22:5
   |
LL |     #[unstable = "1200"] type T = S;
   |     ^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:25:5
   |
LL |     #[unstable = "1200"] impl S { }
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors

